--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
    <br>
    <button onclick="click7()" id="7botao" class="botao-style" ></button> 
    <button onclick="click8()" id="8botao" class="botao-style" ></button> 
-   <button onclick="click9()" id="9botao" class="botao-style" ></button> 
+   <button onclick="click9()" id="9botao" class="botao-style" ></button> <br><br>
+   <button id="botao_recarregar" onclick="recarregar()">Recarregar</button>
     </div>
 
-    <button id="botao_recarregar" onclick="recarregar()">Recarregar</button>
+    
 
     
 
